# django-ninja-demo

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: mypy.ini
src/: manage.py
src/myapp/: api.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
src/myapp/settings/: base.py  local.py  test.py
src/users/: admin.py  constants.py  managers.py  middleware.py  models.py  types.py
src/users/api/: dal.py  schemas.py  views.py
src/users/fixtures/: users.json
src/users/management/commands/: create_admin_user.py  create_dev_user.py  create_dev_user_jwt.py  create_users_fixture.py  setup_dev_env.py
src/users/migrations/: 0001_initial.py  0002_profile_profileview_blockeduser_user_blocked_users_and_more.py
src/users/tests/: conftest.py  factories.py
src/users/tests/api/: test_users.py  utils.py
